--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link href="tailwind.min.css" rel="stylesheet" />
-    <meta name="description" content="Mitsweb" />
+    <meta
+      name="description"
+      content="MitsWeb | Online portal of Muthoot Institute of Technology and Science "
+    />
+    <meta
+      name="keywords"
+      content="Mitsweb ,Muthoot,  Muthoot Institute of Technology and Science, misweb , MITS"
+    />
+    <meta name="author" content="Team Mitsweb" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
