convert to PWA 😀

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
       content="Mitsweb ,Muthoot,  Muthoot Institute of Technology and Science, misweb , MITS"
     />
     <meta name="author" content="Team Mitsweb" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
